--- a/src/Style/Project.css
+++ b/src/Style/Project.css
@@ -61,24 +61,24 @@
     align-items: center;
     height: 320px;
     /* width: 450px; */
-
+    overflow: hidden;
     width: 100%;
     /* color: cornsilk; */
     /* background-color: white; */
     background: rgba(255, 255, 255,0.5);
     /* opacity: 0.5; */
+    
     transition-duration: 0.5s;
     box-shadow: 0px 0 10px #00000075;
-    
     
 }
 
 .projectsActive{
-    transform: scale(1.1);
+    transform: scale(1.3);
     /* scale: 1.1; */
-    opacity: 1;
-    background: rgba(255, 255, 255, 0.881);
-    box-shadow: 0 0 20px rgb(255, 252, 252);
+    /* opacity: 1; */
+    /* background: rgba(255, 255, 255, 0.881);
+    box-shadow: 0 0 20px rgb(255, 252, 252); */
 }
 
 
@@ -193,6 +193,18 @@
     transform:translateX(0px) translateY(0px) rotate(0deg);
 }
 
+
+
+/* Projects background*/
+
+#prj1{
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    object-fit: cover;
+    transition-duration: 0.5s;
+    
+}
 
 @keyframes animation1{
     from{
